--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "12.x"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -19,10 +19,12 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "scripts": {
-    "server": "nodemon -r dotenv/config ./server.js"
+    "start": "nodemon -r dotenv/config ./server.js"
   }
 }
